--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git://github.com/raincloud/node-aws.git"
   },
   "author": "Jordan Ryan Moore <jordanryanmoore@rainclouddev.com>",
-  "main": "node-aws.js",
+  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
