--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node": ">= 0.6.0"
   },
   "dependencies": {
-    "libxmljs": ">= 0.4.0"
+    "libxmljs": ">= 0.4.0",
+    "when": "1.3.0",
+    "winston": "0.6.1"
   }
 }
