--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "libxmljs": ">= 0.4.0",
     "when": "1.3.0",
-    "winston": "0.6.1"
+    "winston": "0.6.1",
+    "whet.extend": "0.9.7"
   }
 }
